versioned_docs/version-2026.1.1/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx


---
sidebar_label: 'Caroline Domingues Porto do Nascimento Barbieri'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Caroline Domingues Porto do Nascimento Barbieri",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Lógica de programação - 2562",
          "size": 2,
          "teachers": [
            "Rafael Gil Ferques",
            "Caroline Domingues Porto do Nascimento Barbieri"
          ],
          "classroom": "laboratorio_de_informatica_c_-_cr_toledo",
          "students": [
            "IIW2026B"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Lógica de Programação - 1483",
          "size": 2,
          "teachers": [
            "Caroline Domingues Porto do Nascimento Barbieri"
          ],
          "classroom": "laboratorio_de_informatica_b_-_cr_toledo",
          "students": [
            "FICPB2025"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Lógica de Programação - 1483",
          "size": 2,
          "teachers": [
            "Olavo José Luiz Junior",
            "Caroline Domingues Porto do Nascimento Barbieri"
          ],
          "classroom": "laboratorio_de_informatica_b_-_cr_toledo",
          "students": [
            "FICPB2025"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Linguagem de Programação - 1484",
          "size": 4,
          "teachers": [
            "Olavo José Luiz Junior",
            "Caroline Domingues Porto do Nascimento Barbieri"
          ],
          "classroom": "laboratorio_de_informatica_b_-_cr_toledo",
          "students": [
            "FICPB2025"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Apoio Presencial - 2529",
          "size": 4,
          "teachers": [
            "Caroline Domingues Porto do Nascimento Barbieri"
          ],
          "classroom": "",
          "students": [
            "EADTMA2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Apoio Presencial - 2529",
          "size": 4,
          "teachers": [
            "Caroline Domingues Porto do Nascimento Barbieri"
          ],
          "classroom": "",
          "students": [
            "EADTMA2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Caroline Domingues Porto do Nascimento Barbieri

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

